# File-Obfuscator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  mainwindow.cpp  mainwindow.h  mainwindow.ui
obfuscator_dir/: CMakeLists.txt  de-obfuscator.cpp  obfuscator.cpp
